--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,10 +1,17 @@
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Dropdown
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" id="searchResults" aria-labelledby="dropdownMenu1">
+  </ul>
+</div>
 <div class="container">
 <div id="sortPanel">
 </div>
 <div class="map_favorites">
 <div class ="container" id="map"></div>
 <div id="directionsText"></div>
-<div id="searchResults"></div>
 </div>
 </div>
 
