--- a/views/search/searchContent.html
+++ b/views/search/searchContent.html
@@ -1,8 +1,8 @@
 <div class="container">
     <form >
     <div id="search">
-        <input type="text" class="searchBox" id="term" value="mexican" placeholder="Name of Place,Trails.....">
-        <input type="text" class="searchBox" id="location" value="San Jose" placeholder="Location">
+        <input type="text" class="searchBox" id="term"  placeholder="Name of Place,Trails.....">
+        <input type="text" class="searchBox" id="location"  placeholder="Location">
     </div>      
      <!--   <button type="button" id="currentLocation" class="btn btn-default">Submit</button> --->
         <button type="button" id="testbutton" class="btn btn-default">Search</button>
