--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Dropdown
+    Favorites
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" id="searchResults" aria-labelledby="dropdownMenu1">
