--- a/views/planner/plannerStyle.css
+++ b/views/planner/plannerStyle.css
@@ -3,6 +3,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
       }
       .container{
         padding:0;
@@ -49,9 +50,9 @@
       .glyphicon glyphicon-remove{
        float:right; 
       }
-      h5{
-        font-weight:bold;
-        display:inline-block;
+      .goIcon{
+        font-size:12px;
+        color:#999;
       }
       #reviews{
         display:block;
@@ -65,16 +66,12 @@
          margin-left:20px;
          border-radius:5px;
          width:110px;
-
       }
       #sortPanel{
         height:800px;
         width:45%;
         min-width:450px;
         float:left;
-      }
-      .dropBox{
-        background-color:red;
       }
       .ToDo{ 
         height:150px;
@@ -86,7 +83,7 @@
         border-width:1px;
         border-radius:4px;
         background-color: white;
-        width:450px;
+        width:470px;
         height:140px;
         margin: 0 auto;
         margin-top:10px;
@@ -99,6 +96,13 @@
        display:inline-block;
        border-width:0px;
           
+     }
+     .distance{
+         display:inline-block;
+         width:80px;
+        font-weight:bold;
+        font-size:12px;
+        color:#999;
      }
      
      .snippet_text{
@@ -133,4 +137,5 @@
      .dropdown{
          display:inline;
      }
+  
      
