--- a/views/search/searchStyle.css
+++ b/views/search/searchStyle.css
@@ -51,7 +51,7 @@
         padding-left:15px;  
         border:none;
         color:#f2f2f2;
-        background-color:#a6a6a6;
+        background-color:#504C86;
         height:45px;
         width:300px;
         font-size:20px;
