--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -1,5 +1,5 @@
 <%include ../partials/header%>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMMJZOHCIonaJDigVJKsgPV9Y8QUFK6tA&callback=initMap"async defer>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%include ../../keys/googleKey.html%>&callback=initMap"async defer>
 </script>
 <style type="text/css">
 <%include searchStyle.css%>
