--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,8 +1,9 @@
+
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Favorites
     <span class="caret"></span>
-  </button>
+  </button><span>  <button id="searchbtn" class="btn btn-default">Search</button></span><button id="planbtn" class="btn btn-default">planner</button></span>
   <ul class="dropdown-menu" id="searchResults" aria-labelledby="dropdownMenu1">
   </ul>
 </div>
