--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -3,7 +3,7 @@
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Favorites
     <span class="caret"></span>
-  </button><span>  <button id="searchbtn" class="btn btn-default">Search</button></span><button id="planbtn" class="btn btn-default">planner</button></span>
+  </button>
   <ul class="dropdown-menu" id="searchResults" aria-labelledby="dropdownMenu1">
   </ul>
 </div>
