--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -6,7 +6,16 @@
   </button>
   <ul class="dropdown-menu" id="searchResults" aria-labelledby="dropdownMenu1">
   </ul>
-</div>
+  <!-- input for Journey's captions,name,days,  -->
+  <!-- number of days selections -->
+  <dayselections></dayselections>
+  <span id="previousDay" class="glyphicon glyphicon-triangle-left"></span>day
+  <span id="currentDay">1</span>
+  <span id="nextDay" class="glyphicon glyphicon-triangle-right"></span>
+
+
+<div class='glyphicon glyphicon-triangle-right nextButton'></div>
+ <!-- panels for directions, maps, and directions   -->
 <div class="container">
 <div id="sortPanel">
 </div>
