--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,4 +1,10 @@
-
+ <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle journeybutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu journeyslist">
+  </ul>
+</div>
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Favorites
@@ -8,10 +14,10 @@
   </ul>
   <!-- input for Journey's captions,name,days,  -->
   <!-- number of days selections -->
-  <dayselections></dayselections>
   <span id="previousDay" class="glyphicon glyphicon-triangle-left"></span>day
   <span id="currentDay">1</span>
-  <span id="nextDay" class="glyphicon glyphicon-triangle-right"></span>
+  <span id="nextDay" class="glyphicon glyphicon-triangle-right">
+  </span>
 
 
 <div class='glyphicon glyphicon-triangle-right nextButton'></div>
