--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -18,7 +18,7 @@
   <span id="currentDay">1</span>
   <span id="nextDay" class="glyphicon glyphicon-triangle-right">
   </span>
-
+</div>
 
 <div class='glyphicon glyphicon-triangle-right nextButton'></div>
  <!-- panels for directions, maps, and directions   -->
