reorganized landing page and fixed new Journey button, fixed the search query to display all results instead of less than 10

--- a/views/frontPage/landingPage.ejs
+++ b/views/frontPage/landingPage.ejs
@@ -1,10 +1,10 @@
-<% include partials/header %>
+<% include ../partials/header%>
 <div class="container">
   <div class="jumbotron" >
     
     <h1>Adventures is out there</h1>
     <p>Plan and Share your adventures with Journey</p>
-    <a href="/journey/new" type="button" class="btn btn-default navbar-btn">Create journeys</a>
+    <a href="/newJourney" type="button" class="btn btn-default navbar-btn">Create journeys</a>
    </div>
    
    
@@ -26,5 +26,5 @@
 <% }); %>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
 
