--- a/views/newJourney/newJourney.ejs
+++ b/views/newJourney/newJourney.ejs
@@ -7,11 +7,7 @@
       <input type="text" class="form-control" id="nameInput" name="journeyName" >
     </div>
     <div class="form-group">
-        <label for="locationInput">location</label>
-      <input type="text" class="form-control"  id="locationInput" name="location">
-    </div>
-    <div class="form-group">
-      <label for="descriptionInput">Caption</label>
+      <label for="descriptionInput">Captions</label>
       <input class="form-control" id="descriptionInput" name="caption" >
     </div> 
     <button class="btn btn-default" type="submit">Submit</button>
