--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -51,12 +51,12 @@
        <form class="navbar-form navbar-right" role="search" action="/login" method="POST">
         <div class="form-group">
           <label class="sr-only" for="exampleInputEmail3">Email address</label> 
-          <input type="text" class="form-control" id="exampleInputEmail3" name="username" placeholder="Username" >
+          <input type="text" class="form-control" id="exampleInputEmail3" name="username" placeholder="Username" value="phiz">
         </div>
        <!-- Sign In-password input -->
         <div class="form-group">
           <label class="sr-only" for="exampleInputPassword3">Password</label>
-          <input type="text" class="form-control" id="exampleInputPassword3" name="password" placeholder="Password" >
+          <input type="text" class="form-control" id="exampleInputPassword3" name="password" placeholder="Password" value="nguyen">
         </div>
         
         <button type="submit" class="btn btn-default">login</button>
